--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Soccer</string>
+    <string name="btnLogin">Login</string>
+    <string name="Password">Password</string>
+    <string name="Username">Username</string>
 </resources>
