mainActivity bug behoben und menu verbessert

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="PosAtk">Attacker</string>
     <string name="btnSave">Save</string>
     <string name="btnCancel">Cancel</string>
+    <string name="mniAdd">Add Player</string>
+    <string name="mniEdit">Edit Player</string>
 </resources>
