Menu in ein dynamisches Menu geändert --> in Documents gibt es eine Doku die zeigt wie man neue Einträge hinzufügt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="PosAtk">Attacker</string>
     <string name="btnSave">Save</string>
     <string name="btnCancel">Cancel</string>
+    <string name="mniMain">Main</string>
     <string name="mniAdd">Add Player</string>
     <string name="mniEdit">Edit Player</string>
     <string name="ckbIsAdmin">Is Admin</string>
