--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="btnSave">Save</string>
     <string name="btnCancel">Cancel</string>
     <string name="mniMain">Main</string>
+    <string name="mniLogin">Login</string>
     <string name="mniAdd">Add Player</string>
     <string name="mniEdit">Edit Player</string>
     <string name="ckbIsAdmin">Is Admin</string>
