--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -67,4 +67,11 @@
 
     <string name="ctxMniEditPlayer">Bearbeiten</string>
     <string name="ctxMniDeletePlayer">Löschen</string>
+    <string name="pref_header_general">Allgemein</string>
+    <string name="pref_ip_title">Glassfish Server IP</string>
+    <string name="pref_port_title">Glassfish Server Port</string>
+    <string name="title_activity_settings">Einstellungen</string>
+    <string name="nav_settings_title">Einstellungen</string>
+
+
 </resources>
