TeamDivisionActivity Layout überarbeitet, add_game_enter_data beendet auch die Activities vor ihr

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="Positions">Positions</string>
     <string name="btnSave">Save</string>
     <string name="btnCancel">Cancel</string>
+    <string name="btnShuffle">Shuffle</string>
     <string name="mniMain">Main</string>
     <string name="mniTeam">Team(test)</string>
     <string name="mniGerman">Deutsch</string>
