--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -83,11 +83,16 @@
 
     <string name="ctxMniEditPlayer">Bearbeiten</string>
     <string name="ctxMniDeletePlayer">Löschen</string>
-    <string name="pref_header_general">Allgemein</string>
-    <string name="pref_ip_title">Glassfish Server IP</string>
-    <string name="pref_port_title">Glassfish Server Port</string>
-    <string name="title_activity_settings">Einstellungen</string>
     <string name="nav_settings_title">Einstellungen</string>
 
-
+    <!--Settings-->
+    <string name="preference_category_general_title">Allgemein</string>
+    <string name="preference_category_webservice">Webservice</string>
+    <string name="preference_language_summary">App Sprache</string>
+    <string name="preference_language_title">Sprache</string>
+    <string name="preference_webservice_ip_summary">Webservice ip adresse</string>
+    <string name="preference_webservice_ip_title">IP</string>
+    <string name="preference_webservice_port_summary">Webservice port</string>
+    <string name="preference_webservice_port_title">Port</string>
+    <!---->
 </resources>
