--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,10 @@
     <string name="msg_IllegalUsername">Username must only contain letters and numbers</string>
     <string name="msg_UsernameTooLong">Username must not be longer than %d characters</string>
     <string name="msg_NameTooLong">Name must not be longer than %d characters</string>
+    <string name="msg_PlayerhasNoTeam">Every player must be assigned to a Team</string>
+    <string name="msg_TeamHasNoGolaie">No Goalkeeper in: </string>
+    <string name="msg_UnbalancedTeams">The player difference between the Teams is too high</string>
+
 
 
     <string name="ctxMniEditPlayer">Edit</string>
