--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,7 +88,6 @@
     <string name="msg_UnbalancedTeams">The player difference between the Teams is too high</string>
 
 
-
     <string name="ctxMniEditPlayer">Edit</string>
     <string name="ctxMniDeletePlayer">Delete</string>
     <string name="title_activity_settings">Settings</string>
@@ -115,5 +114,6 @@
         <item>de</item>
         <item>en</item>
     </string-array>
+    <string name="title_activity_score_board">Scoreboard</string>
     <!---->
 </resources>
