--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_activity_add_player">Add player</string>
     <string name="title_activity_player_stats">Player Stats</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_scoreboard">Scoreboard</string>
 
     <string name="btnLogin">Login</string>
     <string name="Password">Password</string>
@@ -28,7 +29,7 @@
     <string name="mniEnglish">English</string>
     <string name="mniLogin">Login</string>
     <string name="mniAdd">Add Player</string>
-    <string name="mniEdit">Edit Player</string>
+    <string name="mniEdit">Edit Userdata</string>
     <string name="ckbIsAdmin">Admin</string>
     <string name="btnAdd">Add</string>
     <string name="Date">Date</string>
