Implemented delete game

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -87,6 +87,7 @@
     <string name="msg_PlayerhasNoTeam">Jeder Spieler muss einem Team zugewiesen werden</string>
     <string name="msg_TeamHasNoGolaie">Kein Torwart in: </string>
     <string name="msg_UnbalancedTeams">Die Spielerdifferenz zwischen den Teams ist zu groß</string>
+    <string name="msg_CouldNotDeleteGame">Spiel konnte nicht gelöscht werden</string>
 
     <string name="ctxMniEditPlayer">Bearbeiten</string>
     <string name="ctxMniDeletePlayer">Löschen</string>
