--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Soccer</string>
     <string name="title_activity_add_game_select_players">Select Players</string>
-    <string name="title_activity_team_management">Team Managment</string>
+    <string name="title_activity_team_management">Team Management</string>
     <string name="title_activity_add_game_enter_data">Enter Data</string>
     <string name="title_activity_login">Login</string>
     <string name="title_activity_edit_player_own">Edit own data</string>
@@ -92,6 +92,7 @@
     <string name="msg_PlayerhasNoTeam">Every player must be assigned to a Team</string>
     <string name="msg_TeamHasNoGolaie">No Goalkeeper in: </string>
     <string name="msg_UnbalancedTeams">The player difference between the Teams is too high</string>
+    <string name="msg_CouldNotDeleteGame">Could not delete game</string>
 
 
     <string name="ctxMniEditPlayer">Edit</string>
